--- a/MPCClass/MPCClass.vcxproj.filters
+++ b/MPCClass/MPCClass.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="QuadProg++.hh">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="Managed.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -48,6 +51,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="QuadProg++.cc">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="Managed.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
